--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
-    "express-fileupload": "^1.1.1-alpha.3"
+    "express-fileupload": "^1.1.1-alpha.3",
+    "mysql": "^2.16.0"
   }
 }
