--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-fileupload": "^1.1.1-alpha.3",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "request-ip": "^2.1.3"
   }
 }
